# AutoFHE

./: LICENSE  README.md
cnn_ckks/: CMakeLists.txt
cnn_ckks/common/: PolyUpdate.cpp  PolyUpdate.h
cnn_ckks/cpu-ckks/single-key/ckks_bootstrapping/: Bootstrapper.cpp  Bootstrapper.h
cnn_ckks/cpu-ckks/single-key/cnn/: cnn_seal.cpp  cnn_seal.h  infer_seal.cpp  infer_seal.h
cnn_ckks/cpu-ckks/single-key/comp/: SEALcomp.cpp  SEALcomp.h
cnn_ckks/cpu-ckks/single-key/seal-modified-3.6.6/dotnet/: SEALNet.sln
cnn_ckks/result/: d13.txt
cnn_ckks/run/: run_bootstrapping.cpp  run_cnn.cpp  run_compare.cpp
search/: Search.md  ckks.py  datasets.py  evolution.py  helper.py  model2txt.py  parallel.py  pl_models.py  requirements.txt  search.py  train.py  tune.py
search/models/: __init__.py  activation.py  resnet.py  resnet_aespa.py  resnet_autofhe.py  vgg.py  vgg_aespa.py  vgg_autofhe.py
weights/resnet20-cifar10/: B.txt  bn1_bias.txt  bn1_running_mean.txt  bn1_running_var.txt  bn1_weight.txt  conv1_weight.txt  layer1_0_bn1_bias.txt  layer1_0_bn1_running_mean.txt  layer1_0_bn1_running_var.txt  layer1_0_bn1_weight.txt  layer1_0_bn2_bias.txt  layer1_0_bn2_running_mean.txt  layer1_0_bn2_running_var.txt  layer1_0_bn2_weight.txt  layer1_0_conv1_weight.txt  layer1_0_conv2_weight.txt  layer1_0_relu1_max_val.txt  layer1_0_relu1_min_val.txt  layer1_0_relu2_max_val.txt  layer1_0_relu2_min_val.txt  layer1_1_bn1_bias.txt  layer1_1_bn1_running_mean.txt  layer1_1_bn1_running_var.txt  layer1_1_bn1_weight.txt  layer1_1_bn2_bias.txt  layer1_1_bn2_running_mean.txt  layer1_1_bn2_running_var.txt  (+110 more)
(+3861 files in other folders)
